# ClimateTimeMachine_Rust

./: .env  .gitignore  Cargo.toml  README.md  ee_service.py  tile_config.json  tile_config_2000.json  tile_config_2010.json  tile_config_2025.json
gee/: expression.json
scripts/: gee_map.py  gee_rust.py
src/: main.rs  main.txt
src/api/: climate.rs  heat_alert.rs  location.rs  mod.rs  tiles.rs
src/models/: heat_alert.rs  mod.rs
src/scheduler/: heat_alert_scheduler.rs  mod.rs
src/services/: data_fetcher.rs  earthengine.rs  heat_alert_services.rs  mod.rs  tile_config_service.rs
src/utils/: cities.rs
tiles/: tile_config_2002.json  tile_config_2012.json  tile_config_2025.json
