[package]
name = "climate-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["tokio", "http1", "macros"] }
hyper = { version = "1.6.0", features = ["full"] }
anyhow = "1.0"
dotenvy = "0.15.0"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls", "blocking"] }
thiserror = "2.0.12"
tokio = { version = "1.29", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
env_logger = "0.11"
log = "0.4"
validator = { version = "0.20", features = ["derive"] }
validator_derive = "0.20"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.6"   # For image processing
once_cell = "1.19"
gcp_auth = "0.12.3" # grabs OAuth tokens from GOOGLE_APPLICATION_CREDENTIALS
yup-oauth2 = { version = "12.1", features = ["hyper-rustls"] }
jsonwebtoken = "9.3.1"
npy = "0.4.0"

